--- a/attandance/src/main/resources/templates/application/index.html
+++ b/attandance/src/main/resources/templates/application/index.html
@@ -84,6 +84,9 @@
                     return temp;
                 })
             },
+            onDataLoaded: function () {
+                $("#jsGrid").jsGrid("sort", "trainingName");
+            }
         });
     }
 
