--- a/attandance/src/main/resources/templates/exhibition/form.html
+++ b/attandance/src/main/resources/templates/exhibition/form.html
@@ -9,7 +9,7 @@
 <div th:include="layout.html"></div>
 <div class="page-content">
     <div class="form">
-        <form>
+        <form id="exhibitionForm">
             <div class="form-group">
                 <h1>Přidat akci</h1>
                 <label for="name">Název</label>
@@ -55,6 +55,7 @@
 </div>
 </body>
 </html>
+
 <script>
     $(document).ready(function () {
         $(".submitForm").on("click", function () {
@@ -77,10 +78,19 @@
     function send(data) {
         $.ajax({
             url: "/api/v1/action",
+            async: false,
             method: "POST",
             contentType: "application/json",
             dataType: "json",
-            data: JSON.stringify(data)
+            data: JSON.stringify(data),
+            success: function () {
+                $("#exhibitionForm").attr('action', "/actions");
+                alert("Akce byla úspešně založena")
+            },
+            error: function (response) {
+                alert(response.responseJSON.message);
+                $("#exhibitionForm").attr('action', "javascript:void(0)");
+            }
         })
     }
 </script>
